--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -364,6 +364,22 @@ img {
   margin-left: 0;
 }
 
+.project-page-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+.project-page-grid li {
+  list-style-type: none;
+}
+.project-page-grid img {
+  width: 100%;
+}
+
+.project-page-intro {
+  width: 80%;
+  margin: auto;
+}
+
 .last, .last:hover {
   border-color: #fff;
 }
