--- a/css/main.scss
+++ b/css/main.scss
@@ -79,6 +79,7 @@ main {
     width: 100%;
     margin: auto; 
 }
+.device-page h1{ font-size: 42px;}
 .device-page section:nth-child(1){
 
     color: #fff;
