added styles for new theme colors on all fcc pages

--- a/device-sharing/css/fcc.scss
+++ b/device-sharing/css/fcc.scss
@@ -1,3 +1,10 @@
+/* colors */
+$color--drktheme--primary: #fff;
+$color--drktheme--hover: #32fe94;
+$color--drktheme--link: #fd9200;
+$color--lttheme--primary: #0f0b94;
+$color--lttheme--link: #22a962;
+$color--lttheme--hover: #rgb(91,181,189);
 .device-page {
     h1 {
         margin-top: 0;
@@ -14,7 +21,10 @@
     h1,h2,h3 {
         font-weight: 700;
     }
-
+    .hamburger,.hamburger:before,
+    .hamburger:after {
+        background: #fff;
+    }
     .branding {
         height: 100%;
         position: relative;
@@ -27,27 +37,50 @@
         bottom: 20px;
         left: 0;
     }
-
-    .device-share1{
-
+    .menu-desktop a{
         color: #fff;
-        background: rgb(51,40,128);
-        background: linear-gradient(90deg, rgba(42, 83, 87, 0.9) 0%, rgba(151,138,208,0.8) 100%);
-        a { color: #fff;}
+    }
+    .menu-desktop a:hover{
+        color: #32fe94;
+    }
+    section   > div {
+        padding: 20px;
+        margin: 0 auto;  
+    }
+    .device-share1{
+        color: $color--lttheme--primary;
+        background: #fff;
+        a { color: #22a962;}
         a:hover {
             color: rgb(91,181,189);
         }
         h3 {
             margin: 2em 0 0 0;
         }
-        > div {
-            padding: 20px;
-            margin: 0 auto;
+        
+    }
+    .device-share2 {
+        color: #fff;
+        background: rgb(51,40,128);
+        background: linear-gradient(90deg, rgba(44, 178, 162, 0.8) 0%, rgba(27,114,246,0.8) 100%);
+        a { color: $color--lttheme--link;}
+        a:hover {
+            color: $color--lttheme--hover;
         }
+        h3 {
+            margin: 2em 0 0 0;
+        }
+    }
+    details {
+        margin-bottom: 1em;
+    }
+    summary:hover {
+        color: rgb(91,181,189);
     }
     .hero {
         background-image: url('../images/fcc-banner-mobile.jpg');
         background-position: bottom right;
+        margin-top: -79px;
     }
     
 }
@@ -77,7 +110,7 @@
         h1{ 
             font-size: 42px;
         }
-        .device-share1 > div {
+        section > div {
             padding: 80px;
             width:60%;
         }
