--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -120,8 +120,8 @@ img {
   position: relative;
 }
 .hackathon__header #logo {
-  width: 100px;
-  padding: 40px 0 0 20px;
+  width: 140px;
+  padding: 0 0 0 20px;
   position: absolute;
   top: 0px;
   left: 0px;
