--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -151,8 +151,8 @@ img {
     justify-content: center;
     position: relative;
     #logo {
-        width: 100px;
-        padding: 40px 0 0 20px;
+        width: 140px;
+        padding: 0 0 0 20px;
         position: absolute;
         top: 0px;
         left: 0px;
