--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,18 @@ header.branding #logo svg {
   margin-top: -10px;
 }
 
+a.button.pink, button.button.pink {
+  border-color: #fff;
+  background-color: #fff;
+  color: #FF3464;
+}
+
+a.button.pink:hover, button.button.pink:hover {
+  border-color: #fff;
+  background-color: #FF3464;
+  color: #fff;
+}
+
 .wlf {
   display: grid;
   grid-template-columns: 1fr;
@@ -330,6 +342,11 @@ footer {
   color: #fff;
 }
 
+footer div {
+  width: 80%;
+  margin: auto;
+}
+
 /* Text over an images */
 .person-card p.mobile-only {
   text-align: center;
@@ -407,6 +424,37 @@ footer {
   font-size: 12px;
 }
 
+section.gof {
+  background-color: #FF3464;
+  color: #fff;
+}
+
+section.gof h1, section.gof h2, section.gof h3, section.gof h4, section.gof p {
+  color: #fff;
+}
+
+section.gof nav {
+  background-color: #F7E332;
+}
+
+section.gof nav a {
+  color: #1333D3;
+}
+
+section.gof nav a:hover {
+  color: #E5450A;
+}
+
+section.gof div {
+  padding: 60px 0;
+  width: 80%;
+  margin: auto;
+}
+
+section.gof figure {
+  margin: 0;
+}
+
 /* MAILCHIMP STYLES */
 #mc_embed_signup {
   background: #fff;
@@ -451,6 +499,10 @@ footer {
   }
 
   #subscribe-form {
+    width: 60%;
+  }
+
+  section.gof div {
     width: 60%;
   }
 
@@ -520,6 +572,10 @@ footer {
   }
 
   .contributors p {
+    width: 60%;
+  }
+
+  footer div {
     width: 60%;
   }
 }
