--- a/css/main.scss
+++ b/css/main.scss
@@ -432,7 +432,7 @@ section.gof nav {
   background-color: #F7E332;
 }
 section.gof nav a {
-  color: ##D81E4A;
+  color: #D81E4A;
 }
 section.gof nav a:hover {
   color: #E5450A;
