--- a/gallery-of-the-future/style.css
+++ b/gallery-of-the-future/style.css
@@ -226,6 +226,10 @@ footer {
   color: #fff;
 }
 
+section #subscribe-form, section #subscribe-form div {
+  padding: 0;
+}
+#subscribe-form #mc_embed_signup .mc-field-group{ max-width: 600px; }
 
 @media only screen and (min-width: 768px) {
   h1, h2 {
