--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,11 @@ p {
 
 /* END Global Styles */
 .hero {
-  background-image: url("../images/backgrounds/skyline-mobile.png");
+  background-image: url("../images/heros/home-wft20.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 20px;
   height: 300px;
-  margin-top: -64px;
 }
 
 .about {
@@ -82,8 +81,7 @@ main {
 }
 
 .home-page section:nth-child(1) {
-  background: #efe6d7;
-  background: radial-gradient(circle, rgba(239, 230, 215, 0.8) 0%, rgba(239, 211, 170, 0.253019958) 58%, rgba(159, 140, 113, 0.5) 100%);
+  background: #fff;
 }
 
 /* desktop 3rd color: #dec49e */
@@ -94,9 +92,7 @@ img {
 header.branding #logo {
   width: 140px;
   padding: 0 0 0 20px;
-}
-header.branding #logo svg {
-  margin-top: -10px;
+  margin-top: -18px;
 }
 
 a.button.pink, button.button.pink {
@@ -172,8 +168,8 @@ a :hover {
 }
 
 .button {
-  color: #00877E;
-  border: 1px solid #00877E;
+  color: #E5450A;
+  border: 1px solid #E5450A;
   padding: 10px 16px;
   text-decoration: none;
   display: inline-block;
@@ -181,13 +177,13 @@ a :hover {
 }
 
 .button:hover {
-  border-color: #fd9200;
-  color: #fd9200;
+  border-color: #E5450A;
+  background: #E5450A;
+  color: #fff;
 }
 
 .events {
-  background-image: url("../images/backgrounds/annie-spratt-0ZPSX_mQ3xI-unsplash.png");
-  background-size: cover;
+  background: #fff;
   padding: 80px;
 }
 
@@ -469,7 +465,7 @@ section.gof figure {
   }
 
   .hero {
-    background-image: url("../images/backgrounds/skyline.png");
+    background-image: url("../images/heros/home-wft20.png");
     background-position: 0 0;
   }
 
@@ -536,12 +532,12 @@ section.gof figure {
     height: 0;
     line-height: 50px;
     text-decoration: none;
-    color: #005a65;
+    color: #505555;
     justify-content: space-evenly;
   }
 
   .menu-desktop a:hover {
-    color: #fd9200;
+    color: #E5450A;
   }
 
   .desktop {
